# ladybug

./: Makefile  pixi.toml
.github/workflows/: ci-workflow.yml  precompiled-bin-workflow.yml
src/common/file_system/: virtual_file_system.cpp
src/function/table/: show_official_extensions.cpp
src/include/main/query_result/: arrow_query_result.h
src/include/optimizer/: count_rel_table_optimizer.h  logical_operator_visitor.h
src/include/planner/operator/: logical_operator.h
src/include/processor/: plan_mapper.h
src/include/processor/operator/: arrow_result_collector.h  physical_operator.h
src/include/storage/table/: arrow_rel_table.h  arrow_table_support.h  columnar_rel_table_base.h  csr_node_group.h  ice_disk_rel_table.h  rel_table.h
src/main/query_result/: arrow_query_result.cpp
src/optimizer/: count_rel_table_optimizer.cpp  foreign_join_push_down_optimizer.cpp  logical_operator_visitor.cpp  optimizer.cpp
src/planner/operator/: logical_operator.cpp
src/planner/operator/scan/: CMakeLists.txt  (+1 more)
src/processor/map/: CMakeLists.txt  create_arrow_result_collector.cpp  map_rel_degree_table.cpp  plan_mapper.cpp
src/processor/operator/: arrow_result_collector.cpp  physical_operator.cpp
src/processor/operator/scan/: CMakeLists.txt  rel_degree_table.cpp
src/storage/: storage_manager.cpp
src/storage/table/: arrow_rel_table.cpp  arrow_table_support.cpp  columnar_rel_table_base.cpp  ice_disk_rel_table.cpp  rel_table.cpp
test/api/: arrow_rel_table_test.cpp  arrow_test.cpp
test/optimizer/: optimizer_test.cpp
tools/shell/: shell_runner.cpp
(+4 files in other folders)
